# IRIS

./: .env.example  .gitignore  AI_ONBOARDING_SUMMARY.md  README.md  TODO.md  pyproject.toml
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py  container.py  i18n.py  job_text.py  logging.py
app/models/: __init__.py  auth.py  config.py  indexing.py  jobs.py  runtime_status.py  search_api.py  vector_index.py
app/repos/: __init__.py  event_store.py  graph_migrations.py  graph_repo.py  index_job_store.py  job_store.py  langchain_graph.py  neo4j_driver.py  neo4j_job_store.py  url_history.py  vector_index_job_store.py
app/services/: app_config.py  auth.py  indexing.py  jobs.py  local_data.py  runtime_status.py  search_api.py  vector_index.py
app/services/crawl/: __init__.py  fetcher.py  (+4 more)
app/static/: app.css
data/: visited_urls.json
docs/: config-api.md  search-api.md
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx
mcp/: README.md  pyproject.toml
mcp/iris_mcp_server/: __init__.py  __main__.py  cli.py  client.py  config.py  embedding_client.py  logging_utils.py  models.py  server.py
mcp/tests/: test_client.py  test_config.py  test_server.py
tests/: test_auth_gate.py  test_canonicalizer.py  test_config_runtime.py  test_crawl_pipeline.py  test_discovery.py  test_event_store.py  test_extractor.py  test_fetch_url_tool.py  test_graph_repo.py  test_graphrag_retriever.py  test_graphrag_workflow.py  test_indexing.py  test_job_migrations.py  test_job_resume.py  test_kg_service.py  test_llm_client.py  test_llm_orchestrator.py  test_pipeline_utils.py  test_runtime_status.py  test_search_api.py  test_url_history.py  test_vector_index.py
(+38 files in other folders)
