[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iris"
version = "0.1.0"
description = "通用知识图谱自动采集与图谱更新系统"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4",
  "fastapi",
  "httpx",
  "jinja2",
  "neo4j",
  "openai",
  "playwright",
  "pydantic",
  "pydantic-settings",
  "python-multipart",
  "python-dotenv",
  "sse-starlette",
  "structlog",
  "trafilatura",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
