[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iris-mcp-server"
version = "0.1.0"
description = "Independent MCP server package for the IRIS search API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
  "mcp>=1.10.0",
  "openai>=2.26.0",
  "pydantic>=2.0,<3",
  "pydantic-settings>=2.0,<3",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[project.scripts]
iris-mcp-server = "iris_mcp_server.cli:main"
iris-mcp-server-http = "iris_mcp_server.cli:main_http"

[tool.hatch.build.targets.wheel]
packages = ["iris_mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]